--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -12,12 +12,28 @@
       <artifactId>motech</artifactId>
       <version>1.0-SNAPSHOT</version>
   </parent>
+  
+  <repositories>
+      <repository>
+          <url>http://repository.jboss.org/maven2</url>
+          <id>jboss-repo</id>
+          <layout>default</layout>
+          <name>JBoss Repository</name>
+      </repository>
+      <repository>
+       <url>http://download.java.net/maven/2/</url>
+       <id>maven2-repository.dev.java.net</id>
+       <name>Java.net Repository for Maven 2</name>
+     </repository>
+  </repositories>
+    
   <dependencies>
 
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -29,21 +45,60 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.4</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring</artifactId>
-      <version>2.5.6.SEC01</version>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>2.5.6.SEC01</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>2.5.6.SEC01</version>
     </dependency>
 
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.15</version>
-      <scope>compile</scope>
+      <version>1.2.14</version>
     </dependency>
     <dependency>
       <groupId>com.dreamoval.motech</groupId>
@@ -68,11 +123,31 @@
       <artifactId>webservices-api</artifactId>
       <version>2.0-SNAPSHOT</version>
       <type>jar</type>
+    </dependency>  
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-core</artifactId>
+      <version>2.2.2</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf</artifactId>
-        <version>2.2.2</version>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-core</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxws</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http</artifactId>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-databinding-aegis</artifactId>
+      <version>2.2.2</version>
     </dependency>
     <dependency>
        <groupId>org.apache.neethi</groupId>
@@ -96,13 +171,13 @@
     </dependency>
     <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
-        <artifactId>jdom</artifactId>
-        <version>1.1</version>
+        <artifactId>org.apache.servicemix.bundles.jdom</artifactId>
+        <version>1.1_1</version>
     </dependency>
     <dependency>
-        <groupId>javax.xml.ws</groupId>
+        <groupId>com.sun.xml.ws</groupId>
         <artifactId>jaxws-rt</artifactId>
-        <version>2.0EA3</version>
+        <version>2.1.5</version>
     </dependency>
     <dependency>
             <groupId>javax.faces</groupId>
@@ -139,3 +214,4 @@
         <netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
     </properties>
 </project>
+
