--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,20 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>MoTeCH Mobile Web</display-name>
     
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -15,7 +29,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/webapp-config.xml</param-value>
     </context-param>
-    
+
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -23,6 +37,20 @@
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
@@ -32,7 +60,21 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    
+
+
+
+
+
+
+
+
+
+
+    <servlet>
+        <servlet-name>messagingService</servlet-name>
+        <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+        </servlet>
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
         <url-pattern>/webservices/*</url-pattern>
