--- a/pom.xml
+++ b/pom.xml
@@ -279,7 +279,7 @@
                 <version>2.0.4</version>
             </dependency>
             <dependency>
-                <groupId>sun-jaxb</groupId>
+                <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
                 <version>2.1.9</version>
             </dependency>
