--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -103,7 +103,7 @@
        <artifactId>neethi</artifactId>
     </dependency>
     <dependency>
-        <groupId>sun-jaxb</groupId>
+        <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
     </dependency>
     <dependency>
