--- a/motech-mobile-webapp/src/test/resources/log4j.properties
+++ b/motech-mobile-webapp/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=DEBUG,logfile
+log4j.rootLogger=WARN, CONSOLE
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
