--- a/pom.xml
+++ b/pom.xml
@@ -440,6 +440,12 @@
                 <artifactId>cglib-nodep</artifactId>
                 <version>2.1_3</version>
             </dependency>
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>2.5.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
