--- a/motech-mobile-omi/pom.xml
+++ b/motech-mobile-omi/pom.xml
@@ -60,6 +60,10 @@
           <groupId>log4j</groupId>
           <artifactId>log4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+        </dependency>
     </dependencies>
 </project>
 
