--- a/motech-mobile-webapp/pom.xml
+++ b/motech-mobile-webapp/pom.xml
@@ -1,15 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dreamoval.motech</groupId>
     <artifactId>motech-mobile-webapp</artifactId>
     <packaging>war</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>MoTeCH Mobile WebApp</name>
     <url>http://maven.apache.org</url>
     <parent>
         <groupId>com.dreamoval</groupId>
         <artifactId>motech-mobile</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <dependencies>
 
@@ -62,19 +63,19 @@
         <dependency>
           <groupId>com.dreamoval.motech</groupId>
           <artifactId>motech-mobile-core</artifactId>
-          <version>1.1-SNAPSHOT</version>
+          <version>1.0-SNAPSHOT</version>
           <type>jar</type>
         </dependency>
         <dependency>
           <groupId>com.dreamoval.motech</groupId>
           <artifactId>motech-mobile-omp</artifactId>
-          <version>1.1-SNAPSHOT</version>
+          <version>1.0-SNAPSHOT</version>
           <type>jar</type>
         </dependency>
         <dependency>
           <groupId>com.dreamoval.motech</groupId>
           <artifactId>motech-mobile-omi</artifactId>
-          <version>1.1-SNAPSHOT</version>
+          <version>1.0-SNAPSHOT</version>
           <type>jar</type>
         </dependency>
         <dependency>
@@ -228,3 +229,4 @@
         <web.context>${project.parent.artifactId}</web.context>
     </properties>
 </project>
+
