--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-log4j.rootLogger=WARN, CONSOLE
+log4j.rootLogger=WARN, stdout, logfile
 
 # in case any output is given to stdout, format it
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -9,7 +9,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/motech-mobile.log
+log4j.appender.logfile.File=${motech-root}/WEB-INF/logs/motech-mobile.log
 log4j.appender.logfile.MaxFileSize=512KB
 
 # Keep three backup files.
@@ -21,6 +21,6 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.debug=true
 
-log4j.category.org.acegisecurity=DEBUG
-log4j.category.org.springframework=DEBUG
-log4j.category.org.hibernate=DEBUG
+#log4j.category.org.acegisecurity=DEBUG
+#log4j.category.org.springframework=DEBUG
+#log4j.category.org.hibernate=DEBUG
