--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -7,16 +7,25 @@
     </welcome-file-list>
 
     <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/log4j-motech.properties</param-value>
+    </context-param>
+    <context-param>
+      <param-name>webAppRootKey</param-name>
+      <param-value>motech-root</param-value>
+    </context-param>
+    
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+
+  
+    <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/webapp-config.xml</param-value>
     </context-param>
-
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
-    <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
 
 
