--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -110,6 +110,11 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
+        <dependency>
+           <groupId>org.motechproject</groupId>
+           <artifactId>motech-wsapi</artifactId>
+           <version>1.0-M2-SNAPSHOT</version>
+       </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
