--- a/motech-mobile-core/pom.xml
+++ b/motech-mobile-core/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>derby</artifactId>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+        <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
         </dependency>
