--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <display-name>MoTeCH Mobile Web</display-name>
-    
+
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
@@ -14,12 +14,12 @@
       <param-name>webAppRootKey</param-name>
       <param-value>motech-root</param-value>
     </context-param>
-    
+
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
 
-  
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/webapp-config.xml</param-value>
@@ -29,6 +29,9 @@
     </listener>
 
 
+    <listener>
+        <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>CXFServlet</servlet-name>
         <servlet-class>
@@ -44,9 +47,10 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
+  
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
         <url-pattern>/webservices/*</url-pattern>
     </servlet-mapping>
-    
+
     </web-app>
