--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -8,19 +8,11 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=${motech-root}/WEB-INF/logs/motech-mobile.log
-log4j.appender.logfile.MaxFileSize=512KB
+log4j.appender.logfile=org.apache.log4j.FileAppender
+log4j.appender.logfile.File=${catalina.home}/logs/motech-mobile.log
 
-# Keep three backup files.
-log4j.appender.logfile.MaxBackupIndex=3
-
-# Pattern to output: date priority [category] - message
+# Pattern to output: date priority [thread] [category] - message
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d %p %t [%c] - %m%n
+log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 
 log4j.debug=true
-
-#log4j.category.org.acegisecurity=DEBUG
-#log4j.category.org.springframework=DEBUG
-#log4j.category.org.hibernate=DEBUG
