--- a/motech-mobile-core/src/main/resources/mysql.hibernate.properties
+++ b/motech-mobile-core/src/main/resources/mysql.hibernate.properties
@@ -2,5 +2,5 @@
 # of Hibernate.
 
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=validate
