--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,11 @@
                 <type>jar</type>
             </dependency>
             <dependency>
+                <groupId>org.motechproject</groupId>
+                <artifactId>motech-wsapi</artifactId>
+                <version>1.0-M3-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-rt-core</artifactId>
                 <version>${cxf.version}</version>
